--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
+    "jquery": "^3.7.1",
+    "next": "15.1.3",
+    "prisma": "^6.1.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
